Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2603,20 +2603,26 @@ input, select, textarea {
 			transition: opacity 0.3s ease; /* Smooth transition for hover effect */
 		}
 
+		/* Overlay Effect */
 		.work-item .image:before {
 			transition: opacity 0.3s ease-in-out;
-			background: url("images/overlay.png");
+			background: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
 			border-radius: 0.35em;
 			content: '';
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			width: 100%;
 		}
 
+		.work-item .image.thumb:hover:before {
+			opacity: 1.0;
+		}
+
+		/* View Text Overlay */
 		.work-item .image.thumb:after {
 			transition: opacity 0.3s ease-in-out;
 			border-radius: 0.35em;
@@ -2636,14 +2642,10 @@ input, select, textarea {
 			text-decoration: none;
 			top: 50%;
 			white-space: nowrap;
+			transform: translate(-50%, -50%);
 		}
 
 		.work-item .image.thumb:hover:after {
-			opacity: 1.0;
-		}
-
-		.work-item .image.thumb:hover:before {
-			background: url("images/overlay.png"), url("images/overlay.png");
 			opacity: 1.0;
 		}
 
